exports[`createRequest has correct payload in JWT for a plain request for public details 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8",
    "iat": 1485321133996,
    "iss": "0x001122",
    "pairId": "6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "type": "shareReq",
  },
  "signature": "IeA-zYbNqqnNiVy2SsmwLIvduWhdtTmRasEElzazg9tYSyOujGEnn6TOtPBVTR9WqgNhUyIqiJIlTqIa3aE_mA",
}
`;

exports[`createRequest has correct payload in JWT for a request 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8",
    "iat": 1485321133996,
    "iss": "0x001122",
    "pairId": "6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "rybln1wqA9LzcHynGQVZxXzBRpKGNuzOaDtf64G1HVQQ7QNRXjaL4599HZs_qUJYs4euRYIN5wj2xHdaXZZLWg",
}
`;

exports[`createRequest has correct payload in JWT for a request asking for verified credentials 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8",
    "iat": 1485321133996,
    "iss": "0x001122",
    "pairId": "6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
    "verified": Array [
      "name",
    ],
  },
  "signature": "1VD8zUL1gXKoNrpaJNVEQgd90TT_AuOznk9qihAUizUxoyh4GbnOldUsBwwlkL1tKTVaAWFqxZTHiqZ1NuZ5mA",
}
`;

exports[`createRequest has correct payload in JWT for a request for push notifications 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8",
    "iat": 1485321133996,
    "iss": "0x001122",
    "pairId": "6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "permissions": Array [
      "notifications",
    ],
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "6NMMMDaL3CjyfS9ciTKOvmVNnS4m6rjDXNM2ZJE8CQqqIbgGooRwrOVTbUt17LqxbbgSLQSdff0LL_FKbyoW4Q",
}
`;

exports[`createRequest has correct payload in JWT for a request with callbackUrl 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "callback": "https://myserver.com",
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8",
    "iat": 1485321133996,
    "iss": "0x001122",
    "pairId": "6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "UPBxIl7JsDWRU_mG5jf7bX7OmKuUBiy6OD5E9lFmz1V2rXcYh9AAeZqd8SttAL-QNg-kUp7JiODiH9K-br_j6w",
}
`;

exports[`createRequest ignores unsupported request parameters 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8",
    "iat": 1485321133996,
    "iss": "0x001122",
    "pairId": "6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "type": "shareReq",
  },
  "signature": "IeA-zYbNqqnNiVy2SsmwLIvduWhdtTmRasEElzazg9tYSyOujGEnn6TOtPBVTR9WqgNhUyIqiJIlTqIa3aE_mA",
}
`;

exports[`receive returns profile mixing public and private claims 1`] = `
Object {
  "address": "0x001122",
  "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8",
  "name": "Davie",
  "pairId": "6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
  "phone": "+15555551234",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;

exports[`receive returns profile mixing public and private claims and verified credentials 1`] = `
Object {
  "address": "0x001122",
  "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8",
  "name": "Davie",
  "pairId": "6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
  "phone": "+15555551234",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
  "verified": Array [
    Object {
      "claim": Object {
        "email": "bingbangbung@email.com",
      },
      "exp": 1485321134996,
      "iat": 1485321133996,
      "iss": "0x001122",
      "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJzdWIiOiIweDExMjIzMyIsImNsYWltIjp7ImVtYWlsIjoiYmluZ2JhbmdidW5nQGVtYWlsLmNvbSJ9LCJleHAiOjE0ODUzMjExMzQ5OTYsImlzcyI6IjB4MDAxMTIyIiwiaWF0IjoxNDg1MzIxMTMzOTk2fQ.-mEzVMPYnzqFhOr0O7fs71-dWAacnllVyOdWQY0zh2ZdIt7-30IYTewds4tGlkLmMky-Y1ZjRmIsxmM7xvAgxg",
      "sub": "0x112233",
    },
  ],
}
`;

exports[`receive returns profile with only public claims 1`] = `
Object {
  "address": "0x001122",
  "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8",
  "name": "David Chaum",
  "pairId": "6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;
